# kmu_2010

./: README.md  README.rst  pyproject.toml  setup.py
Kmu2010/: translit.py
UkrTranslit/: Kmu2010.py  __init__.py  translit.py
test/: test0.py  test_Kmu2010.py  test_c2l.py
