[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "UkrTranslit"
version = "0.1.0"
description = "A Python package for KMU 2010."
authors = [{ name="Andrey Shapovalov", email="mt.andrey@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
